--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Switch dir to project
+      run: |
+        cd ros_learning
     - name: Run Tests
       run: |
         python manage.py test
